--- a/Crayola_Engine/CrayolaEngine_2010.vcxproj.filters
+++ b/Crayola_Engine/CrayolaEngine_2010.vcxproj.filters
@@ -23,43 +23,46 @@
     <ClInclude Include="include\Prerequisites.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="BaseApp.h">
+    <ClInclude Include="include\BaseApp.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="Device.h">
+    <ClInclude Include="include\Device.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="DeviceContext.h">
+    <ClInclude Include="include\DeviceContext.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="Swapchain.h">
+    <ClInclude Include="include\stb_image.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="Texture.h">
+    <ClInclude Include="include\Swapchain.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="Window.h">
+    <ClInclude Include="include\Texture.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="stb_image.h">
+    <ClInclude Include="include\Window.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Resource.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrayolaEngine.cpp" />
-    <ClCompile Include="BaseApp.cpp">
+    <ClCompile Include="source\BaseApp.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="Device.cpp">
+    <ClCompile Include="source\Device.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="DeviceContext.cpp">
+    <ClCompile Include="source\DeviceContext.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="Texture.cpp">
+    <ClCompile Include="source\Texture.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="Window.cpp">
+    <ClCompile Include="source\Window.cpp">
       <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
