--- a/CrayolaEngine/CrayolaEngine_2010.vcxproj
+++ b/CrayolaEngine/CrayolaEngine_2010.vcxproj
@@ -465,6 +465,11 @@
     <ClInclude Include="include\DepthStencilView.h" />
     <ClInclude Include="include\Device.h" />
     <ClInclude Include="include\DeviceContext.h" />
+    <ClInclude Include="include\ECS\Actor.h" />
+    <ClInclude Include="include\ECS\Component.h" />
+    <ClInclude Include="include\ECS\EngineMath.h" />
+    <ClInclude Include="include\ECS\Entity.h" />
+    <ClInclude Include="include\ECS\Transform.h" />
     <ClInclude Include="include\InputLayout.h" />
     <ClInclude Include="include\MeshComponent.h" />
     <ClInclude Include="include\ModelLoader.h" />
@@ -477,6 +482,21 @@
     <ClInclude Include="include\Swapchain.h" />
     <ClInclude Include="include\Texture.h" />
     <ClInclude Include="include\UI.h" />
+    <ClInclude Include="include\Utilities\Matrix\Matrix2x2.h" />
+    <ClInclude Include="include\Utilities\Matrix\Matrix3x3.h" />
+    <ClInclude Include="include\Utilities\Matrix\Matrix4x4.h" />
+    <ClInclude Include="include\Utilities\Memory\TSharedPointer.h" />
+    <ClInclude Include="include\Utilities\Memory\TStaticPtr.h" />
+    <ClInclude Include="include\Utilities\Memory\TUniquePtr.h" />
+    <ClInclude Include="include\Utilities\Memory\TWeakPointer.h" />
+    <ClInclude Include="include\Utilities\Structures\TArray.h" />
+    <ClInclude Include="include\Utilities\Structures\TMap.h" />
+    <ClInclude Include="include\Utilities\Structures\TPair.h" />
+    <ClInclude Include="include\Utilities\Structures\TSet.h" />
+    <ClInclude Include="include\Utilities\Vectors\Quaternion.h" />
+    <ClInclude Include="include\Utilities\Vectors\Vector2.h" />
+    <ClInclude Include="include\Utilities\Vectors\Vector3.h" />
+    <ClInclude Include="include\Utilities\Vectors\Vector4.h" />
     <ClInclude Include="include\Viewport.h" />
     <ClInclude Include="include\Window.h" />
     <ResourceCompile Include="CrayolaEngine.rc" />
