--- a/CrayolaEngine/CrayolaEngine_2010.vcxproj.filters
+++ b/CrayolaEngine/CrayolaEngine_2010.vcxproj.filters
@@ -188,8 +188,11 @@
     <ClInclude Include="include\ECS\Transform.h">
       <Filter>include\ECS</Filter>
     </ClInclude>
-    <ClInclude Include="include\ECS\EngineMath.h">
+    <ClInclude Include="include\Utilities\EngineMath.h">
       <Filter>include\Utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Transform.h">
+      <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -258,6 +261,12 @@
       <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="source\ModelLoader.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Transform.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Actor.cpp">
       <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
