--- a/CrayolaEngine/CrayolaEngine_2010.vcxproj
+++ b/CrayolaEngine/CrayolaEngine_2010.vcxproj
@@ -474,6 +474,7 @@
     <ClInclude Include="include\InputLayout.h" />
     <ClInclude Include="include\MeshComponent.h" />
     <ClInclude Include="include\ModelLoader.h" />
+    <ClInclude Include="include\OBJ_Loader.h" />
     <ClInclude Include="include\Prerequisites.h" />
     <ClInclude Include="include\RenderTargetView.h" />
     <ClInclude Include="include\Resource.h" />
